development/svc-nginx.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nginx
    app.kubernetes.io/instance: appnginx
  name: nginx-svc
  namespace: dev
spec:
  ports:
  - port: 8090
    protocol: TCP
    targetPort: 80
    name: http
  selector:
    app: nginx
  type: ClusterIP
status:
  loadBalancer: {}
